# find-net-board

./: .env-sample  Dockerfile  README.md  create_database.sql  fetch_info.py  manage.py  pyproject.toml  run_tests.py
.github/workflows/: publish-container.yml
board/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_rename_tests_test_and_more.py  0003_alter_datacenter_station_url_alter_datacite_licenses_and_more.py  0004_consistency_eida_routing_fdsn_registry_and_more.py  0005_alter_consistency_eidarout_net_and_more.py
board/static/board/: datacenter_tests.js  index.js  style.css  test_runs.js
board/templates/admin/: index.html
board/templates/board/: datacenter_tests.html  index.html  test_runs.html
netstests/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
