[tool.poetry]
name = "find-net-board"
version = "0.1.0"
description = ""
authors = ["Vasilis Petrakopoulos <vasilis4998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
django = "^5.0.4"
celery = "^5.4.0"
whitenoise = "^6.6.0"
psycopg = "^3.1.19"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
ruff = "^0.5.0"
tqdm = "^4.66.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "ANN", # Missing-type-self
  "COM812", # Missing-trailing-comma
  "D",      # Docstrings stuff. Ignore for now
  "ISC001", # As demanded by ruff format
  "RUF012", # For django migration files
]
target-version = "py310"

[tool.pytest.ini_options]
addopts = "--cov --no-migrations"
DJANGO_SETTINGS_MODULE = "netstests.settings"
testpaths = ["board"]
python_files = ["tests.py", "test_*.py", "*_test.py"]

[tool.coverage.run]
branch = true
source = ["board"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "asgi.py",
    "wsgi.py",
]
