[project]
name = "find-net-board"
version = "0.1.0"
description = "Tool to check consistency of seismological networks metadata and routing"
authors = ["Vasilis Petrakopoulos <vasilis4998@gmail.com>"]
readme = "README.md"
dependencies = [
    "alive-progress>=3.2.0",
    "celery>=5.4.0",
    "django-environ>=0.11.2",
    "django>=5.1.3",
    "psycopg>=3.2.3",
    "requests>=2.32.3",
    "sw-django-utils>=0.0.54",
]
requires-python = ">= 3.12"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "ANN", # Missing-type-self
  "COM812", # Missing-trailing-comma
  "D",      # Docstrings stuff. Ignore for now
  "ISC001", # As demanded by ruff format
  "RUF012", # For django migration files
]


[tool.coverage.run]
branch = true
source = ["board"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "asgi.py",
    "wsgi.py",
]
